--- a/eureka.properties
+++ b/eureka.properties
@@ -1,9 +1,11 @@
 #Indicando el puerto que estará utilizando al aplicación
+spring.application.name=eureka
 server.port = 8761
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
 
+eureka.client.serviceUrl.defaultZone=http://eurekaserver:8761/eureka/
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
