--- a/servidor-eureka.properties
+++ b/servidor-eureka.properties
@@ -1,8 +1,8 @@
 #Indicando el puerto que estará utilizando al aplicación
-server.port = 7999
+server.port = 8761
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
 
-# Añadiendo una propiedad para prueba.
-barcamp = Barcamp RD 2020 - 21 noviembre 2020
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
