--- a/event-microservice.properties
+++ b/event-microservice.properties
@@ -1,5 +1,5 @@
 #configuracion Datasource para la base de datos.
-spring.datasource.url=jdbc:h2:~/usersmicroservice
+spring.datasource.url=jdbc:h2:~/eventmicroservice
 #spring.datasource.url=jdbc:h2:tcp://${HOST-BD}/micro
 spring.datasource.username=sa
 spring.datasource.password=
@@ -7,12 +7,14 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 #Información sobre JPA para la creación.
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Configuración para habilitar la consola de H2
 spring.h2.console.enabled=true
-spring.h2.console.path=/user-console
+spring.h2.console.path=/event-console
 spring.cloud.config.import-check.enabled=false
+
+spring.mvc.format.date=yyyy-MM-dd
 
 #Spring Cloud Config
 #Indicando el puerto que estará utilizando al aplicación
