--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -14,8 +14,8 @@ management.endpoints.web.exposure.include=*
 # el nombre del servicio es directamente referenciado y se obtiene desde el servidor
 # Eureka. Es es el nombre que utilizamos en la propiedad spring.application.name
 zuul.routes.user.service-id=user-microservice
-zuul.routes.user.path=/
+#zuul.routes.user.path=/
 zuul.routes.event.service-id=event-microservice
-zuul.routes.event.path=/
+#zuul.routes.event.path=/
 zuul.routes.notification.service-id=notification-microservice
-zuul.routes.notification.path=/
+#zuul.routes.notification.path=/
