--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -19,3 +19,4 @@ zuul.routes.event.service-id=event-microservice
 zuul.routes.event.path=/event/**
 zuul.routes.notification.service-id=notification-microservice
 zuul.routes.notification.path=/notification/**
+zuul.ignored-headers = Access-Control-Allow-Credentials, Access-Control-Allow-Origin
