--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 #Información sobre JPA para la creación.
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Configuración para habilitar la consola de H2
 spring.h2.console.enabled=true
