--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -20,3 +20,5 @@ zuul.routes.event.path=/event/**
 zuul.routes.notification.service-id=notification-microservice
 zuul.routes.notification.path=/notification/**
 zuul.ignored-headers = Access-Control-Allow-Credentials, Access-Control-Allow-Origin
+
+spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
