--- a/notification-microservice.properties
+++ b/notification-microservice.properties
@@ -31,3 +31,5 @@ eureka.client.service-url.defaultZone=http://${EUREKA-SERVER:localhost}:8761/eur
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
+
+spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
