--- a/servidor-eureka.properties
+++ b/servidor-eureka.properties
@@ -6,3 +6,5 @@ management.endpoints.web.exposure.include=*
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
