--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -29,3 +29,5 @@ eureka.client.service-url.defaultZone=http://${EUREKA-SERVER:localhost}:8761/eur
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
+
+spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
