--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -5,7 +5,7 @@ server.port = 8080
 #Configuración para el registro en Eureka indicando la dirección
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://${EUREKA-SERVER:localhost}:8761/eureka
+
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
@@ -21,4 +21,7 @@ zuul.routes.notification.service-id=notification-microservice
 zuul.routes.notification.path=/notification/**
 zuul.ignored-headers = Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 
-spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
+#docker didnt change the variables for some reason
+#change to localhost for local use
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+#spring.cloud.config.uri= http://config-server:8888/
