--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -25,9 +25,11 @@ eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application
 #Configuración para el registro en Eureka indicando la dirección
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://${EUREKA-SERVER:localhost}:8761/eureka
+#docker didnt change the variables for some reason
+#change to localhost for local use
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
 
-spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
+#spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
