--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -24,4 +24,4 @@ zuul.ignored-headers = Access-Control-Allow-Credentials, Access-Control-Allow-Or
 #docker didnt change the variables for some reason
 #change to localhost for local use
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
-#spring.cloud.config.uri= http://config-server:8888/
+spring.cloud.config.uri= http://config-server:8888/
