--- a/event-microservice.properties
+++ b/event-microservice.properties
@@ -34,4 +34,4 @@ eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
 
-#spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
+spring.cloud.config.uri= http://config-server:8888/
