--- a/servidor-eureka.properties
+++ b/servidor-eureka.properties
@@ -7,4 +7,4 @@ management.endpoints.web.exposure.include=*
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-spring.cloud.config.uri= http://${CONFIG-SERVER:localhost}:8888/
+spring.cloud.config.uri= http://config-server:8888/
