--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -22,6 +22,5 @@ zuul.routes.notification.path=/notification/**
 zuul.ignored-headers = Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 
 #docker didnt change the variables for some reason
-#change to localhost for local use
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
-spring.cloud.config.uri= http://config-server:8888/
+#change to localhost for local use?
+eureka.client.service-url.defaultZone=http://${EUREKA-SERVER:localhost}:8761/eureka
