--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -26,10 +26,8 @@ eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 #docker didnt change the variables for some reason
-#change to localhost for local use
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+#change to localhost for local use?
+eureka.client.service-url.defaultZone=http://${EUREKA-SERVER:localhost}:8761/eureka
 
 # Exponiendo los endpoints
 management.endpoints.web.exposure.include=*
-
-spring.cloud.config.uri= http://config-server:8888/
